# llm-local

./: .gitignore  README.md  pyproject.toml
llm_local/: app.py  chat.py  embedding.py  llama.py  llm.py  llm_with_tool.py  phi.py
